fix components overlap issue

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -2,7 +2,6 @@
   align-items: center;
   background-color: $dark;
   display: flex;
-  height: 100vh;
   flex-direction: column;
   justify-content: space-between;
 
