--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,8 +2,6 @@ html,
 body {
   background-color: $dark;
   font-family: 'Raleway', sans-serif;
-  height: 100%;
-  height: 100vh;
   margin: 0;
   padding: 0;
   user-select: none;
